# stellar-provekit-gate

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
artifacts/: groth16_claim_digest.hex  policy_commitment.hex  soroban_groth16_invoke.json
contracts/gate/: Cargo.toml
contracts/gate/src/: lib.rs  test.rs  vk_constants.rs
contracts/risc0-verifier/: Cargo.toml
contracts/risc0-verifier/src/: lib.rs  vk_constants.rs
docs/: AUDIT_GRADE_2026-06-26.md  DEMO_POLICY.md  DEVIN_HANDOFF_GROTH16_SOROBAN.md  DEVIN_HANDOFF_WIN_SCORE.md  DORAHACKS_PASTE.md  INTEGRATION.md  JUDGING.md  MERGE_STATUS.md  PATH_B.md  PITCH_VIDEO_SCRIPT.md  SECURITY.md  SUBMISSION.md  TESTNET.md
provekit/host/: Cargo.toml
provekit/host/examples/: check_g2_ark_versions.rs
provekit/host/src/: host_stellar.rs  lib.rs  main.rs  risc0_vk_decode.rs  soroban_grooth16.rs  soroban_groth16.rs
provekit/methods/guest/: Cargo.toml
provekit/methods/guest/src/: main.rs
scripts/: deploy-gate.sh  deploy-risc0-verifier.sh  deploy-testnet.sh  docker.sh  env.example  gen_risc0_soroban_vk.py  init-gate-risc0-verifier.sh  initialize-gate-admin.sh  install-docker-wsl.sh  invoke-gate-risc0-testnet.py  invoke-risc0-groth16-testnet.py  reencode-groth16-invoke.py  smoke-judge.sh  with-docker.sh
